자바 1.8을 위한 긴급 패치